# thermoprint

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  Makefile  README.md  SECURITY.md  topics.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  deploy-demo.yml  publish.yml
examples/: native.rs
examples/web/: app.js  index.html  style.css
js/: export.d.ts  export.js  printer.d.ts  printer.js
src/: builder.rs  commands.rs  dither.rs  encoding.rs  error.rs  i18n.rs  image.rs  lib.rs  template.rs  types.rs
tauri-plugin-thermoprint/: Cargo.toml  README.md
tauri-plugin-thermoprint/src/: commands.rs  lib.rs
tests/: integration.rs
